# jpeg_edit

./: Cargo.toml  index.html  jpeg_edit-1e0a7be89ad8f04c_bg.wasm  jpeg_edit-28f809c0b2d3e33a.js  jpeg_edit-28f809c0b2d3e33a_bg.wasm  jpeg_edit-5fa56840e8a777b4.js  jpeg_edit-5fa56840e8a777b4_bg.wasm  jpeg_edit-61686c0bf52b8a34.js  jpeg_edit-61686c0bf52b8a34_bg.wasm  jpeg_edit-6902c415a5b30133.js  jpeg_edit-6902c415a5b30133_bg.wasm  jpeg_edit-848568a177b0c1ad_bg.wasm  jpeg_edit-84b9bd0b276bc803_bg.wasm  jpeg_edit-9aed848e200407ac.js  jpeg_edit-cdfce9faf5cfbf1c_bg.wasm  jpeg_edit-e8ad277bd6265391.js  jpeg_edit-e8ad277bd6265391_bg.wasm
.github/workflows/: deploy.yaml
src/: ads.rs  app.rs  exif.rs  lib.rs  main.rs  map.rs
static/: style.css
